# personal-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 009_round_trip_group.py  6aef75f4e5aa_add_swim_and_networth_tables.py  7b3c2d1e9af0_add_trade_tables.py  83c9f3a4559d_strategy_type_tagging.py  8a04904394df_add_leg_type_and_strategy_group.py
api/app/: __init__.py  dependencies.py  main.py
api/app/core/: __init__.py  config.py  security.py
api/app/db/: __init__.py  session.py
api/app/models/: __init__.py  networth.py  swim.py  trade.py
api/app/routers/: __init__.py  auth.py  networth.py  pnl.py  portfolios.py  round_trip.py  strategy_groups.py  swim.py  transactions.py
api/app/schemas/: __init__.py  networth.py  pnl.py  round_trip.py  strategy_group.py  swim.py  trade.py
api/app/services/: etrade_csv_parser.py  pnl_service.py  transaction_import_service.py
api/scripts/: seed_swim_events.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_db_session_dependency.py  test_leg_type_tagging.py  test_migration_smoke.py  test_placeholder.py  test_pnl.py  test_portfolios_and_tagging.py  test_round_trip.py  test_strategy_groups.py  test_strategy_type_tagging.py  test_transaction_import_service_unit.py  test_transactions_upload.py
docs/: ModuleA_StrategyTagging_Addendum_v1.0.md  ModuleB_SwimTracker_Addendum_v1.0.md  ModuleC_NetWorthTracker_Addendum_v1.0.md  PRD.md  (+1 more)
(+137 files in other folders)
